--- a/package.json
+++ b/package.json
@@ -18,8 +18,5 @@
   ],
   "author": "Ben Zurkow",
   "license": "ISC",
-  "dependencies": {
-    "react": "^16.6.3",
-    "react-native": "^0.57.5"
-  }
+  "dependencies": {}
 }
