--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swipeable-modal-react-native",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A react-native modal component with built in swipe animations.",
   "main": "index.js",
   "scripts": {
@@ -18,8 +18,9 @@
   ],
   "author": "Ben Zurkow",
   "license": "ISC",
-  "dependencies": {
-    "react": "^16.6.3",
-    "react-native": "^0.57.5"
+  "dependencies": {},
+  "peerDependencies": {
+    "react-native": ">=0.55.3",
+    "react": ">=16.3.2"
   }
 }
